--- a/letters.css
+++ b/letters.css
@@ -1,164 +1,196 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-*{
+/* Reset margin and padding */
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
 }
 
 /* Header section */
-
-header{
-    width: 100%; 
-    max-width: 100%;
-    padding-left: 100px;
-    height: 50px;
+header {
+    width: 100%;
+    height: 60px;
+    background-color: #333; /* Make the background darker */
     display: flex;
+    justify-content: center;
     align-items: center;
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
     z-index: 1000;
 }
 
-header nav a{
+header nav {
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly; /* Distribute items evenly */
+    align-items: center;
+}
+
+header nav a {
     color: #fff;
-    margin-right: 5px;
-    padding: 5px 10px;
     font-size: 16px;
-    transition: 0.2s;
+    padding: 10px 20px;
     text-decoration: none;
+    transition: 0.3s;
 }
 
-a.active{
-    background: #e5314e;
-    border-radius: 2px;
+/* Highlight active link */
+a.active {
+    background-color: #e5314e;
+    border-radius: 5px;
 }
 
-a:hover{
-    background: #e5314e;
-    border-radius: 2px;
+/* On hover, change the background color */
+a:hover {
+    background-color: #e5314e;
+    border-radius: 5px;
 }
 
+/* Styling for the book container */
 body {
-	font-family: "Poppin", sans-serif;
-	background-color: #2e3537;
-	height: 100vh;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+    font-family: 'Poppins', sans-serif;
+    background-color: #2e3537;
+    height: 100vh;
+    margin-top: 60px; /* Add some margin to avoid overlap with header */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 .book {
-	width: 350px;
-	height: 450px;
-	position: relative;
-	transition-duration: 1s;
-	perspective: 1500;
+    width: 350px;
+    height: 450px;
+    position: relative;
+    transition-duration: 1s;
+    perspective: 1500;
 }
+
+/* The rest of your book styles */
 input {
-	display: none;
+    display: none;
 }
+
 .cover, .back-cover {
-	background-color: #4173a5;
-	width: 100%;
-	height: 100%;
-	border-radius: 0 15px 15px 0;
-	box-shadow: 0 0 5px rgb(41, 41, 41);
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	transform-origin: center left;
+    background-color: #4173a5;
+    width: 100%;
+    height: 100%;
+    border-radius: 0 15px 15px 0;
+    box-shadow: 0 0 5px rgb(41, 41, 41);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform-origin: center left;
 }
+
 .cover {
-	position: absolute;
-	z-index: 4;
-	transition: transform 1s;
+    position: absolute;
+    z-index: 4;
+    transition: transform 1s;
 }
+
 .cover label {
-	width: 100%;
-	height: 100%;
-	cursor: pointer;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
 }
+
 .back-cover {
-	position: relative;
-	z-index: 1; /* Ensure back-cover is under the pages */
+    position: relative;
+    z-index: 1;
 }
+
 .page {
-	position: absolute;
-	background-color: white;
-	width: 330px;
-	height: 430px;
-	border-radius: 0 15px 15px 0;
-	margin-top: 10px;
-	transform-origin: left;
-	transform-style: preserve-3d;
-	transform: rotateY(0deg);
-	transition-duration: 1.5s;
-	z-index: 2; /* Pages should be behind the arrows */
+    position: absolute;
+    background-color: white;
+    width: 330px;
+    height: 430px;
+    border-radius: 0 15px 15px 0;
+    margin-top: 10px;
+    transform-origin: left;
+    transform-style: preserve-3d;
+    transform: rotateY(0deg);
+    transition-duration: 1.5s;
+    z-index: 2;
 }
+
 .page img {
-	width: 100%;
-	height: 100%;
-	border-radius: 15px 0 0 15px;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px 0 0 15px;
 }
+
 .front-page {
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	backface-visibility: hidden;
-	box-sizing: border-box;
-	padding: 1rem;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    box-sizing: border-box;
+    padding: 1rem;
 }
+
 .back-page {
-	transform: rotateY(180deg);
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	backface-visibility: hidden;
-	z-index: 1; /* Keep back page below front page */
+    transform: rotateY(180deg);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    z-index: 1;
 }
+
 .next, .prev {
-	position: absolute;
-	bottom: 1em;
-	cursor: pointer;
-	font-size: 30px;
-	color: #000;
-	background-color: rgba(255, 255, 255, 0.5);
-	border-radius: 50%;
-	padding: 10px;
+    position: absolute;
+    bottom: 1em;
+    cursor: pointer;
+    font-size: 30px;
+    color: #000;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 50%;
+    padding: 10px;
 }
+
 .next {
-	right: 1em;
-	z-index: 10; /* Ensure next button is on top of pages */
+    right: 1em;
+    z-index: 10;
 }
+
 .prev {
-	left: 1em;
-	z-index: 10; /* Ensure prev button is on top of pages */
+    left: 1em;
+    z-index: 10;
 }
+
+/* Pages and checkbox handling */
 #page1 {
-	z-index: 3;
+    z-index: 3;
 }
+
 #page2 {
-	z-index: 2;
+    z-index: 2;
 }
+
 #page3 {
-	z-index: 1;
+    z-index: 1;
 }
+
 #checkbox-cover:checked ~ .book {
-	transform: translateX(200px);
+    transform: translateX(200px);
 }
+
 #checkbox-cover:checked ~ .book .cover {
-	transition: transform 1.5s, z-index 0.5s 0.5s;
-	transform: rotateY(-180deg);
-	z-index: 1;
+    transition: transform 1.5s, z-index 0.5s 0.5s;
+    transform: rotateY(-180deg);
+    z-index: 1;
 }
+
 #checkbox-cover:checked ~ .book .page {
-	box-shadow: 0 0 3px rgb(99, 98, 98);
+    box-shadow: 0 0 3px rgb(99, 98, 98);
 }
+
 #checkbox-page1:checked ~ .book #page1 {
-	transform: rotateY(-180deg);
-	z-index: 2;
+    transform: rotateY(-180deg);
+    z-index: 2;
 }
+
 #checkbox-page2:checked ~ .book #page2 {
-	transform: rotateY(-180deg);
-	z-index: 3;
+    transform: rotateY(-180deg);
+    z-index: 3;
 }
