--- a/letters.css
+++ b/letters.css
@@ -1,49 +1,26 @@
-/* Reset margin and padding */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-/* Header section */
 header {
     width: 100%;
-    height: 60px;
-    background-color: #333; /* Make the background darker */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1000;
+    padding: 20px;
+    background-color: #333;
 }
 
-header nav {
+nav {
     display: flex;
-    width: 100%;
-    justify-content: space-evenly; /* Distribute items evenly */
-    align-items: center;
+    justify-content: space-around;
 }
 
-header nav a {
+nav a {
     color: #fff;
-    font-size: 16px;
-    padding: 10px 20px;
     text-decoration: none;
-    transition: 0.3s;
+    padding: 10px;
+    font-size: 16px;
 }
 
-/* Highlight active link */
-a.active {
+nav a:hover,
+nav a.active {
     background-color: #e5314e;
     border-radius: 5px;
-}
-
-/* On hover, change the background color */
-a:hover {
-    background-color: #e5314e;
-    border-radius: 5px;
+    color: #fff;
 }
 
 /* Styling for the book container */
