--- a/style.css
+++ b/style.css
@@ -9,36 +9,30 @@
 
 /* Header section */
 
-header{
-    width: 100%; 
-    max-width: 100%;
-    padding-left: 100px;
-    height: 50px;
+header {
+    width: 100%;
+    padding: 20px;
+    background-color: #333;
+}
+
+nav {
     display: flex;
-    align-items: center;
-    position: relative;
-    z-index: 1000;
+    justify-content: space-around;
 }
 
-header nav a{
+nav a {
     color: #fff;
-    margin-right: 5px;
-    padding: 5px 10px;
-    font-size: 16px;
-    transition: 0.2s;
     text-decoration: none;
+    padding: 10px;
+    font-size: 16px;
 }
 
-a.active{
-    background: #e5314e;
-    border-radius: 2px;
+nav a:hover,
+nav a.active {
+    background-color: #e5314e;
+    border-radius: 5px;
+    color: #fff;
 }
-
-a:hover{
-    background: #e5314e;
-    border-radius: 2px;
-}
-
 /* Header section */
 
 
