--- a/style.css
+++ b/style.css
@@ -9,30 +9,36 @@
 
 /* Header section */
 
-header {
-    width: 100%;
-    padding: 20px;
-    background-color: #333;
-}
-
-nav {
+header{
+    width: 100%; 
+    max-width: 100%;
+    padding-left: 100px;
+    height: 50px;
     display: flex;
-    justify-content: space-around;
+    align-items: center;
+    position: relative;
+    z-index: 1000;
 }
 
-nav a {
+header nav a{
     color: #fff;
-    text-decoration: none;
-    padding: 10px;
+    margin-right: 5px;
+    padding: 5px 10px;
     font-size: 16px;
+    transition: 0.2s;
+    text-decoration: none;
 }
 
-nav a:hover,
-nav a.active {
-    background-color: #e5314e;
-    border-radius: 5px;
-    color: #fff;
+a.active{
+    background: #e5314e;
+    border-radius: 2px;
 }
+
+a:hover{
+    background: #e5314e;
+    border-radius: 2px;
+}
+
 /* Header section */
 
 
