--- a/letters.css
+++ b/letters.css
@@ -1,3 +1,11 @@
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 90vh;
+    background-color: rgb(251, 198, 207);
+}
+
 /* Reset margin and padding */
 * {
     margin: 0;
