--- a/letters.css
+++ b/letters.css
@@ -119,7 +119,7 @@ input {
 }
 
 .cover, .back-cover {
-    background-color: #4173a5;
+    background-color: #ad2a2a;
     width: 100%;
     height: 100%;
     border-radius: 0 15px 15px 0;
