--- a/letters.css
+++ b/letters.css
@@ -214,6 +214,9 @@ input {
     z-index: 1;
 }
 
+#page4 {
+    z-index: 1;
+
 #checkbox-cover:checked ~ .book {
     transform: translateX(200px);
 }
@@ -233,7 +236,12 @@ input {
     transform: rotateY(-180deg);
     z-index: 3;
 }
-#checkbox-page2:checked ~ .book #page2 {
+#checkbox-page3:checked ~ .book #page2 {
+    transform: rotateY(-180deg);
+    z-index: 3;
+}
+
+#checkbox-page4:checked ~ .book #page2 {
     transform: rotateY(-180deg);
     z-index: 3;
 }
