--- a/letters.css
+++ b/letters.css
@@ -172,6 +172,7 @@ input {
     backface-visibility: hidden;
     box-sizing: border-box;
     padding: 1rem;
+    font-size: 14px; 
 }
 
 .back-page {
