--- a/letters.css
+++ b/letters.css
@@ -172,7 +172,8 @@ input {
     backface-visibility: hidden;
     box-sizing: border-box;
     padding: 1rem;
-    font-size: 11px; 
+    font-size: 13px
+    text-indent: 20px;; 
 }
 
 .back-page {
