--- a/letters.css
+++ b/letters.css
@@ -172,8 +172,7 @@ input {
     backface-visibility: hidden;
     box-sizing: border-box;
     padding: 1rem;
-    font-size: 12px
-    text-indent: 20px;; 
+    font-size: 12px; 
 }
 
 .back-page {
