--- a/letters.css
+++ b/letters.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 body {
-    background-image: url('your-image-url.jpg');
+    background-image: url('https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/background.jpg?raw=true');
     width: 100vw;
     height: 100vh;
     margin: 0px;
