--- a/letters.css
+++ b/letters.css
@@ -1,14 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 body {
-    background-image: url('https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/background.jpg?raw=true');
-    width: 100vw;
-    height: 100vh;
-    margin: 0px;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    background-image: url('https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/background.jpg?raw=true''); /* Set the background image for the entire page */
+    background-size: cover; /* Ensure the image covers the full page */
+    background-position: center center; /* Center the background image */
+    background-repeat: no-repeat; /* Prevent the background from repeating */
 }
 
 #container {
@@ -176,12 +172,18 @@ input {
 }
 
 .back-page {
-    transform: rotateY(180deg);
+    transform: rotateY(180deg); /* Rotates the back page */
     position: absolute;
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
     z-index: 1;
+    
+    /* Set the background image */
+    /* Replace with your image URL */
+    background-size: cover; /* Ensures the image covers the page without distortion */
+    background-position: center center; /* Centers the image */
+    background-repeat: no-repeat; /* Prevents repeating the background image */
 }
 
 .next,
