--- a/memories.css
+++ b/memories.css
@@ -26,7 +26,6 @@ header {
   top: 0;
   left: 0;
   z-index: 1000; /* Ensure header stays on top of all content */
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3); /* Optional shadow effect */
 }
 
 /* Navigation links */
@@ -81,7 +80,7 @@ header nav a:hover {
   width: 100%;
   max-width: 600px; /* Limit image width */
   border-radius: 10px;
-  border: 2px solid black;
+  border: 2px solid #cb416b;
   padding: 16px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
 }
@@ -105,7 +104,7 @@ header nav a:hover {
   width: 100%;
   max-width: 600px; /* Limit heading width */
   text-align: center;
-  border-top: 2px solid #80091B;
-  border-bottom: 2px solid #80091B;
+  border-top: 2px solid #cb416b;
+  border-bottom: 2px solid #cb416b;
   margin-bottom: 10px;
 }
