--- a/memories.css
+++ b/memories.css
@@ -96,7 +96,7 @@ header nav a:hover {
 .section-container p {
   padding: 8px 0;
   font-size: 18px;
-  color: #f5f5f5;
+  color: #f5f5f5 !important;
 }
 
 .heart {
