--- a/timeline.css
+++ b/timeline.css
@@ -34,6 +34,10 @@ header nav a:hover {
 
 }
 
+.intro h1 {
+  margin-top: 30px; /* Adjust the value as needed */
+}
+
 :root {
   --white: #fff;
   --black: #323135;
