--- a/timeline.css
+++ b/timeline.css
@@ -35,7 +35,7 @@ header nav a:hover {
 }
 
 .intro h1 {
-  margin-top: 30px; /* Adjust the value as needed */
+   padding-top: 100px; /* Adjust the value as needed */
 }
 
 :root {
