--- a/timeline.css
+++ b/timeline.css
@@ -34,8 +34,12 @@ header nav a:hover {
 
 }
 
-.intro h1 {
+.intro {
    margin-top: 30px; /* Adjust the value as needed */
+}
+
+.intro h1 {
+  padding-top: 0; /* Remove or adjust padding on the heading */
 }
 
 :root {
