--- a/timeline.css
+++ b/timeline.css
@@ -40,6 +40,7 @@ header nav a:hover {
 
 .intro h1 {
   padding-top: 0; /* Remove or adjust padding on the heading */
+    background-color: #dC143c;
 }
 
 :root {
