--- a/timeline.css
+++ b/timeline.css
@@ -48,7 +48,7 @@ header nav a:hover {
   --black: #323135;
   --crystal: #ff8fab;
   --columbia-blue: #cee9e4;
-  --midnight-green: #c4043f;
+  --midnight-green: #e3aabb;
   --yellow: #bf0d43;
   --timeline-gradient: rgba(255, 179, 198, 1) 0%, rgba(206, 233, 228, 1) 50%,
     rgba(206, 233, 228, 0) 100%;
