--- a/timeline.css
+++ b/timeline.css
@@ -40,7 +40,7 @@ header nav a:hover {
 
 .intro h1 {
   padding-top: 0; /* Remove or adjust padding on the heading */
-    background-color: #ffb3c6;
+    background-color: #FFD1DF;
 }
 
 :root {
