--- a/timeline.css
+++ b/timeline.css
@@ -348,7 +348,7 @@ body {
     padding: 2.5rem 0;
 }
 .digit_name{
-    color: #000;
+    color: #b3344d;
     background: #fff;
     text-align: center;
     padding: 0.6rem 0;
