--- a/timeline.css
+++ b/timeline.css
@@ -330,7 +330,8 @@ body {
 .timer{
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 20px;
     margin-top: 80px;
 }
 .sub_timer{
