--- a/room.css
+++ b/room.css
@@ -19,7 +19,7 @@ header nav {
 }
 
 header nav a {
-    color: #fff;
+    color: #fc7e93;
     text-decoration: none;
     font-size: 18px;
     padding: 10px;
