--- a/shows.css
+++ b/shows.css
@@ -5,6 +5,11 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
+
+html, body {
+    height: 100%; /* Ensure full viewport height */
+    margin: 0;
+}
 /* Header section */
 header{
     width: 100%; 
