--- a/games.css
+++ b/games.css
@@ -3,7 +3,7 @@
     --bg-body: #fff;
     --color-txt: #000;
     --filled-color: #000;
-    --filled-bg: #caf0f8;
+    --filled-bg: #fac3e6;
 
     --white: #fff;
     --blue: #00aeef;
