--- a/games.css
+++ b/games.css
@@ -6,7 +6,7 @@
     --filled-bg: #fac3e6;
 
     --white: #fff;
-    --blue: #00aeef;
+    --blue: #de4383;
     --red: #e91e63;
     --black: #000;
 
